[package]
name = "rucksdb"
version = "0.1.0"
edition = "2021"
authors = ["drdrxp"]
description = "A Rust implementation of RocksDB"
license = "Apache-2.0"

[dependencies]
bytes = "1.5"
crc32fast = "1.3"
parking_lot = "0.12"
crossbeam-skiplist = "0.1"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
