[package]
name = "rucksdb"
version = "0.1.0"
edition = "2024"
authors = ["drdrxp"]
description = "A Rust implementation of RocksDB"
license = "Apache-2.0"

[dependencies]
bytes = "1.5"
crc32fast = "1.3"
parking_lot = "0.12"
crossbeam-skiplist = "0.1"
snap = "1.1"
lz4_flex = "0.11"
tempfile = "3.8"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "db_bench"
path = "src/bin/db_bench.rs"

[[bench]]
name = "basic_ops"
harness = false

[[bench]]
name = "concurrent"
harness = false
